--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -1,6 +1,11 @@
 <p>
-  <a href="{% url 'blogs:index' %}">Blog</a>
-  <a href="{% url 'blogs:posts' %}">Posts</a>
+  <a href="{% url 'blogs:index' %}">Blog</a> - 
+  <a href="{% url 'blogs:posts' %}">Posts</a> - 
+  {% if user.is_autenticated %}
+    Hello, {{ user.username }}
+  {% else %}
+    <a href="{% url 'users:login' %}">Log in</a>
+  {% endif%}
 </p>
 
 {% block content %}{% endblock content %}
