--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -3,6 +3,7 @@
   <a href="{% url 'blogs:posts' %}">Posts</a> - 
   {% if user.is_autenticated %}
     Hello, {{ user.username }}
+    <a href="{% url 'users:logout' %}">Log out</a>
   {% else %}
     <a href="{% url 'users:login' %}">Log in</a>
   {% endif%}
