--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -2,9 +2,10 @@
   <a href="{% url 'blogs:index' %}">Blog</a> - 
   <a href="{% url 'blogs:posts' %}">Posts</a> - 
   {% if user.is_autenticated %}
-    Hello, {{ user.username }}
+    Hello, {{ user.username }}.
     <a href="{% url 'users:logout' %}">Log out</a>
   {% else %}
+    <a href="{% url 'users:register' %}">Register</a> - 
     <a href="{% url 'users:login' %}">Log in</a>
   {% endif%}
 </p>
