--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -1,13 +1,13 @@
 <p>
-  <a href="{% url 'blogs:index' %}">Blog</a> - 
-  <a href="{% url 'blogs:posts' %}">Posts</a> - 
-  {% if user.is_autenticated %}
-    Hello, {{ user.username }}.
-    <a href="{% url 'users:logout' %}">Log out</a>
-  {% else %}
-    <a href="{% url 'users:register' %}">Register</a> - 
-    <a href="{% url 'users:login' %}">Log in</a>
-  {% endif%}
+    <a href="{% url 'blogs:index' %}">Blog</a> - 
+    <a href="{% url 'blogs:posts' %}">Posts</a> - 
+    {% if user.is_authenticated %}
+      Hello, {{ user.username }}.
+      <a href="{% url 'users:logout' %}">Log out</a>
+    {% else %}
+      <a href="{% url 'users:register' %}">Register</a> - 
+      <a href="{% url 'users:login' %}">Log in</a>
+    {% endif%}
 </p>
 
 {% block content %}{% endblock content %}
