--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,13 +1,19 @@
 {% extends "blogs/base.html" %}
+{% load bootstrap4 %}
 
+{% block page_header %}
+<h3>Come in and add your interesting post</h3>
+{% endblock page_header %}
+  
 {% block content %}
-  {% if form.errors %}
-    <p> Username or password didn`t match. Please try again. </p>
-  {% endif %}
-  <form method="post" action="{% url 'users:login' %}">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button name="submit">Log in</button>
-      <input type="hidden" name="next" value="{% url 'blogs:index' %}"/>
+  <form method="post" action="{% url 'users:login' %}" class="form">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+      <button name="submit" class="btn btn-primary">Log in</button>
+    {% endbuttons %}
+
+    <input type="hidden" name="next"
+      value="{% url 'blogs:index' %}" />
   </form>
 {% endblock content %}
