Add bootstrap card

--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lika`s blog</title>
     <style type="text/css">
+      
+      .card-img-top {
+        flex-shrink: 0;
+        width: 100%;
+      }
       ul li {
         font-family: Courier New, monospace;
       }
       a {
 	      font-family: OCR A Std, monospace;
-      
       }
      
       
