--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -3,34 +3,37 @@
 <section class="py-5 text-center container">
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
-      <h3 class="fw-light">👽Welcome to my cozy blog👽 </h3>
-      <small><p  class="lead text-muted">Here I write about my favorite topics. I invite you to join the fun discussions.</p></small>
+      <h3 class="fw-light">👽Вітаю вас у моєму блозі👽 </h3>
+      <small><p  class="lead text-muted">Тут я пишу на теми, які мене цікавлять, та запрошую вас доєднатися до обговорень</p></small>
     </div>
     
     
-    <div class="row mb-2">
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">Aliens</strong>
-            <h3 class="mb-0"></h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
-          </div>
-          
+    <div class="card-deck">
+      <div class="card">
+        <img class="card-img-top" src="https://media.istockphoto.com/photos/ufo-over-trees-picture-id501124314?k=20&m=501124314&s=612x612&w=0&h=LLbAk7TU902_wVcwgQVq0dWOdszDAfZblgwFR5AJBzU=" alt="Card image cap" >
+        <div class="card-body">
+          <h5 class="card-title">У цьому розділі усе про прибульців</h5>
+          <p class="card-text" href=""></p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
-
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-success">Animals</strong>
-            <h3 class="mb-0"></h3>
-            <div class="mb-1 text-muted">Nov 11</div>
-            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
-          </div>
+      <div class="card">
+        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="https://media.istockphoto.com/photos/foggy-walk-picture-id1089931102?k=20&m=1089931102&s=612x612&w=0&h=nuBE5Bo39qX_4c9Y5P_LpLSs3JiDLRnTBamvcnB0_8o=" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
           
   </div>
 </section>
