--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -7,7 +7,6 @@
       <small><p  class="lead text-muted">Тут я пишу на теми, які мене цікавлять, та запрошую вас доєднатися до обговорень</p></small>
     </div>
     
-    
     <div class="card-deck">
       <div class="card">
         <img class="card-img-top" src="https://media.istockphoto.com/photos/ufo-over-trees-picture-id501124314?k=20&m=501124314&s=612x612&w=0&h=LLbAk7TU902_wVcwgQVq0dWOdszDAfZblgwFR5AJBzU=" alt="Card image cap" >
@@ -18,33 +17,32 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="https://media.istockphoto.com/vectors/forest-birds-realistic-drawing-of-owls-isolated-on-white-background-vector-id1148779440?k=20&m=1148779440&s=612x612&w=0&h=0jgDGHTKCpNw8pKlX3gfSwXW9GUkK4yd4jgre4Rm-4w=" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Сови</h5>
+          <fieldset>Це різноманітна група птахів, в ній більше 220 видів, що належать ряду совоподібних. Загін совоподібних ділиться на два сімейства – совині, або справжні сови, і сипухові.</fieldset>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="https://media.istockphoto.com/photos/foggy-walk-picture-id1089931102?k=20&m=1089931102&s=612x612&w=0&h=nuBE5Bo39qX_4c9Y5P_LpLSs3JiDLRnTBamvcnB0_8o=" alt="Card image cap">
+        <img class="card-img-top" src="https://media.istockphoto.com/photos/black-sea-science-platform-drilling-exploration-picture-id1195916267?k=20&m=1195916267&s=612x612&w=0&h=CLBrvvWR0lXsffouZ1Ol3rPqSsM15F4rI1wcIgUINBc=" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title"></h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <h5 class="card-title">Мій дім</h5>
+          <p class="card-text"></p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
     </div>
           
   </div>
+
 </section>
 {% endblock page_header %}
 {% block content %}
 <!-- FOOTER -->
 <footer class="footer">
-  <div class="container">
-    <div class="footer-widgets column-two grid-item">
-      <div class="widget widget_text">
-        <div class="widget-content"><h5 class="widget-title subheading heading-size-3">Мої контакти</h5>		
+        <div class="widget-content" >
+          <h5 class="widget-title subheading heading-size-3">Мої контакти</h5>		
           <p>
             Phone number: +380635272682
             </p>	
@@ -57,6 +55,12 @@
               </a>
            </p>
           </div>
+          <audio controls>
+            <source src="file:///E:/%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F/Django_Blog/media/music/Izzamuzzic_Julien_Marchal_Shootout.mp3"
+            type="audio/mp3"></source>
+          </audio>
+          
+            
   
   </footer>
 <!-- /FOOTER -->
